Bug 69641 - Other: Draw crashes when trying to check spelling
Summary: Other: Draw crashes when trying to check spelling
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0 target:4.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-21 13:25 UTC by J
Modified: 2013-10-29 12:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File causing this error (8.14 KB, application/vnd.oasis.opendocument.graphics)
2013-09-21 13:25 UTC, J
Details
backtrace (18.03 KB, text/plain)
2013-09-21 19:37 UTC, Maxim Monastirsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description J 2013-09-21 13:25:40 UTC
Created attachment 86245 [details]
File causing this error

Problem description: 
Libreoffice CTDs when F7 is pressed (or go to Tools -> Spelling) in attached file

Steps to reproduce:
1. Download attached file
2. Open it
3. Press F7 (or Tools -> Spelling)

Current behavior:
Crashes to desktop

Expected behavior:
Does not crash
              
Operating System: Debian
Version: 4.1.1.2 release
Comment 1 sophie 2013-09-21 14:25:47 UTC
Reproduced with Version: 4.1.2.2
Build ID: 281b75f427729060b6446ddb3777b32f957a8fb Debian. 
Note that if the object frame is selected there is no crash, but if you select nothing or the text box inside the object, then LO crashes. Set as New, no duplicate found - Sophie
Comment 2 Maxim Monastirsky 2013-09-21 19:36:39 UTC
Crash reproducible with packages from libreoffice.org. Tested with 4.1.1.2 on Fedora 19 (64-bit). See backtrace below.

Can't reproduce with packages from Fedora repositories on Fedora 19 (64-bit), or with packages from libreoffice-4-1 PPA on Ubuntu 13.04 (64-bit).
Comment 3 Maxim Monastirsky 2013-09-21 19:37:10 UTC
Created attachment 86292 [details]
backtrace
Comment 4 Commit Notification 2013-10-28 16:00:42 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47c6eef77378d96d0921c76ec14c338169f14dbe

Related: fdo#69641 convert OSL_ASSERT into assert



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-10-28 16:00:58 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=08b7af126e546bdbd175023429f544baa9861dba

Related: fdo#69641 check index against length before iterateCodePoints



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-10-28 16:01:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=507e627d83dbfb6a35677450a3fc42d10c79a82e

Related: fdo#69641 double iterateCodePoints doesn't make sense to me



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-10-28 16:01:35 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9d5b07b9085f97edfff5d4ac474e9711036bb0c4

Related: fdo#69641 add a regression test



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2013-10-28 16:06:25 UTC
It didn't crash for me, but there was a pile of brokenness for me. I fixed those and hopefully that was the reason for the final crash. Here's hoping. Feel free to reopen if this persists in a daily that includes these fixes.
Comment 9 Commit Notification 2013-10-29 12:13:10 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1ade1468f26d70c49bd3697f10497e914dd8121&h=libreoffice-4-1

Related: fdo#69641 double iterateCodePoints doesn't make sense to me


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.