Related: fdo#69641 convert OSL_ASSERT into assert

Change-Id: I63c32289c7ac6a428c8c50e49650fbac98c8c5e3